<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="100"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovingActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/tv_imageMakanan"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="70"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_nama_makanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_Makanankuliner"
        android:padding="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Harga"
        android:textSize="19sp"
        android:layout_marginLeft="27dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/tv_hargaMakanan"
        android:text="@string/hargaMakanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textSize="15sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_identitas_keterangan"
            android:text="@string/KeteranganMakanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="15sp"/>
    </androidx.cardview.widget.CardView>


</LinearLayout>